RESOLVED FIXED171728
[MediaStream] r216197 caused some webrtc tests to fail
https://bugs.webkit.org/show_bug.cgi?id=171728
Summary [MediaStream] r216197 caused some webrtc tests to fail
Eric Carlson
Reported 2017-05-05 08:55:19 PDT
webrtc/audio-replace-track.html and webrtc/video-replace-track.html fail after r216197. They fail because both create two media streams, and only one media stream at a time is allowed on iOS. After talking to Youenn about this, we decided that the tests should be changed and the logic to allow only one stream should be refactored.
Attachments
Mark tests as failing (1.37 KB, patch)
2017-05-05 11:10 PDT, Matt Lewis
no flags
Patch (11.44 KB, patch)
2017-05-05 15:46 PDT, youenn fablet
no flags
Patch (11.44 KB, patch)
2017-05-05 16:13 PDT, youenn fablet
no flags
Patch (14.80 KB, patch)
2017-05-05 22:28 PDT, youenn fablet
no flags
Patch for landing (14.71 KB, patch)
2017-05-07 11:30 PDT, youenn fablet
no flags
Matt Lewis
Comment 1 2017-05-05 11:10:08 PDT
Created attachment 309188 [details] Mark tests as failing
Ryan Haddad
Comment 2 2017-05-05 11:22:49 PDT
Comment on attachment 309188 [details] Mark tests as failing Clearing flags on attachment: 309188 Committed r216252: <http://trac.webkit.org/changeset/216252>
youenn fablet
Comment 3 2017-05-05 15:46:29 PDT
youenn fablet
Comment 4 2017-05-05 16:13:12 PDT
youenn fablet
Comment 5 2017-05-05 22:28:00 PDT
Eric Carlson
Comment 6 2017-05-06 09:38:07 PDT
Comment on attachment 309270 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=309270&action=review Thanks! > Source/WebCore/ChangeLog:10 > + Renaming MediaStream::endStream by MediaStream::endCaptureTracks and only stopping capture tracks. Nit: "Renaming MediaStream::endStream by MediaStream::endCaptureTracks" => "Rename MediaStream::endStream to MediaStream::endCaptureTracks" > Source/WebCore/ChangeLog:16 > + Adding the ability to have only one active capture source at a time in a WebProcess. > + This is done by keeping in its related factory the active capture source. > + When a new source is created and started, it replaces the active capture source which becomes muted. > + Using that mechanism for iOS. Great idea, very nice!
youenn fablet
Comment 7 2017-05-07 11:30:32 PDT
Created attachment 309325 [details] Patch for landing
youenn fablet
Comment 8 2017-05-07 11:30:52 PDT
Thanks for the review. > Nit: "Renaming MediaStream::endStream by MediaStream::endCaptureTracks" => > "Rename MediaStream::endStream to MediaStream::endCaptureTracks" Done
WebKit Commit Bot
Comment 9 2017-05-07 12:10:43 PDT
Comment on attachment 309325 [details] Patch for landing Clearing flags on attachment: 309325 Committed r216349: <http://trac.webkit.org/changeset/216349>
WebKit Commit Bot
Comment 10 2017-05-07 12:10:45 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2017-05-07 17:45:08 PDT
Note You need to log in before you can comment on or make changes to this bug.