Source/WebCore/dom/Document.cpp
@@ -6979,7 +6979,7 @@ void Document::stopMediaCapture()
 {
     MediaStreamRegistry::shared().forEach([this](MediaStream& stream) {
         if (stream.document() == this)
-            stream.endStream();
+            stream.endCaptureTracks();
     });
 }
 #endif
